[package]
name = "scan_fmt"
version = "0.2.6"
edition = "2018"
authors = ["wlentz"]
description = "A simple scanf()-like input for Rust"
repository = "https://github.com/wlentz/scan_fmt"
license = "MIT"
readme = "README.md"

[features]
default = ["regex", "std"]
std = []

[dependencies]
regex = { version = "1", optional = true }
